added custom app variable for DB connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EasyTeamUp</string>
+    <string name="mapbox_access_token">pk.eyJ1Ijoid3N1cHBpZ2VyIiwiYSI6ImNsMWJjZXVqYzFnbW8zam53eWEyaGczd2MifQ.Z6kLMFXaxp2tF7zC81KqLw</string>
 </resources>
